@@ -26,8 +26,6 @@
 WebInspector.ScopeChainSidebarPane = function()
 {
     WebInspector.SidebarPane.call(this, WebInspector.UIString("Scope Variables"));
-    this._sections = [];
-    this._expandedSections = {};
     this._expandedProperties = [];
 }
 
@@ -36,6 +34,9 @@ WebInspector.ScopeChainSidebarPane.prototype = {
     {
         this.bodyElement.removeChildren();
 
+        this.sections = [];
+        this.callFrame = callFrame;
+
         if (!callFrame) {
             var infoElement = document.createElement("div");
             infoElement.className = "info";
@@ -43,18 +44,6 @@ WebInspector.ScopeChainSidebarPane.prototype = {
             this.bodyElement.appendChild(infoElement);
             return;
         }
-
-        for (var i = 0; i < this._sections.length; ++i) {
-            var section = this._sections[i];
-            if (!section.title)
-                continue;
-            if (section.expanded)
-                this._expandedSections[section.title] = true;
-            else
-                delete this._expandedSections[section.title];
-        }
-
-        this._sections = [];
 
         var foundLocalScope = false;
         var scopeChain = callFrame.scopeChain;
@@ -92,10 +81,10 @@ WebInspector.ScopeChainSidebarPane.prototype = {
             section.editInSelectedCallFrameWhenPaused = true;
             section.pane = this;
 
-            if (!foundLocalScope || scopeObjectProxy.isLocal || title in this._expandedSections)
+            if (!foundLocalScope || scopeObjectProxy.isLocal)
                 section.expanded = true;
 
-            this._sections.push(section);
+            this.sections.push(section);
             this.bodyElement.appendChild(section.element);
         }
     }
